// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> ProjectMedia -> KindyNow should render the ProjectMedia UI (src: "/assets/images/projects/kindynow/cnm_desktop_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="cnm_desktop_preview"
  thumbnail="/assets/images/projects/kindynow/cnm_desktop_preview.jpg"
  title="Childcare Near Me desktop site"
  type="website"
  url="https://childcarenearme.com"
/>
`;

exports[`Component -> ProjectMedia -> KindyNow should render the ProjectMedia UI (src: "/assets/images/projects/kindynow/cnm_mobile_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="mobile"
  slug="cnm_mobile_preview"
  thumbnail="/assets/images/projects/kindynow/cnm_mobile_preview.jpg"
  title="Childcare Near Me mobile site"
  type="website"
  url="https://childcarenearme.com.au"
/>
`;

exports[`Component -> ProjectMedia -> KindyNow should render the ProjectMedia UI (src: "/assets/images/projects/kindynow/cnm_search_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="cnm_search_preview"
  thumbnail="/assets/images/projects/kindynow/cnm_search_preview.jpg"
  title="Childcare Near Me search"
  type="website"
  url="https://childcarenearme.com.au"
/>
`;

exports[`Component -> ProjectMedia -> KindyNow should render the ProjectMedia UI (src: "/assets/images/projects/kindynow/kn_app_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="mobile"
  slug="kn_app_preview"
  thumbnail="/assets/images/projects/kindynow/kn_app_preview.jpg"
  title="KindyNow Mobile App"
  type="website"
  url="https://www.kindynow.com"
/>
`;

exports[`Component -> ProjectMedia -> KindyNow should render the ProjectMedia UI (src: "/assets/images/projects/kindynow/kn_desktop_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="kn_desktop_preview"
  thumbnail="/assets/images/projects/kindynow/kn_desktop_preview.jpg"
  title="KindyNow desktop site"
  type="website"
  url="https://www.kindynow.com"
/>
`;

exports[`Component -> ProjectMedia -> LEGO Flinders St should render the ProjectMedia UI (src: "/assets/images/projects/legoFlinders/legoFlinders_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="landscape"
  slug="legoFlinders"
  thumbnail="/assets/images/projects/legoFlinders/legoFlinders_preview.jpg"
  title="LEGO Flinders St art print"
  type="image"
  url="/assets/images/projects/legoFlinders/legoFlinders_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> SitePoint should render the ProjectMedia UI (src: "/assets/images/projects/sitepoint/sitepoint_mobile_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="mobile"
  slug="sitepoint_mobile_preview"
  thumbnail="/assets/images/projects/sitepoint/sitepoint_mobile_preview.jpg"
  title="SitePoint mobile site"
  type="website"
  url="https://www.sitepoint.com"
/>
`;

exports[`Component -> ProjectMedia -> SitePoint should render the ProjectMedia UI (src: "/assets/images/projects/sitepoint/sitepoint_premium_mobile_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="mobile"
  slug="sitepoint_premium_mobile_preview"
  thumbnail="/assets/images/projects/sitepoint/sitepoint_premium_mobile_preview.jpg"
  title="SitePoint Premium mobile site"
  type="website"
  url="https://www.sitepoint.com/premium"
/>
`;

exports[`Component -> ProjectMedia -> SitePoint should render the ProjectMedia UI (src: "/assets/images/projects/sitepoint/sitepoint_premium_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="sitepoint_premium_preview"
  thumbnail="/assets/images/projects/sitepoint/sitepoint_premium_preview.jpg"
  title="SitePoint Premium desktop site"
  type="website"
  url="https://www.sitepoint.com/premium"
/>
`;

exports[`Component -> ProjectMedia -> SitePoint should render the ProjectMedia UI (src: "/assets/images/projects/sitepoint/sitepoint_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="sitepoint_preview"
  thumbnail="/assets/images/projects/sitepoint/sitepoint_preview.jpg"
  title="SitePoint desktop site"
  type="website"
  url="https://www.sitepoint.com"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_desktop_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="desktop"
  slug="tramsformation_desktop"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_desktop_preview.jpg"
  title="Tramsformation desktop site"
  type="website"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_mobile_preview.jpg") without throwing an error 1`] = `
<Memo()
  platform="mobile"
  slug="tramsformation_mobile"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_mobile_preview.jpg"
  title="Tramsformation mobile site"
  type="website"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_model_altmode_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="landscape"
  slug="tramsformation_model_altmode"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_model_altmode_preview.jpg"
  title="Tramsformer model tram mode"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformation_model_altmode_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_model_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="portrait"
  slug="tramsformation_model"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_model_preview.jpg"
  title="Tramsformer model"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformation_model_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_print_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="portrait"
  slug="tramsformation_print"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_print_preview.jpg"
  title="Tramsformer art print"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformation_print_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformation_transform_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="portrait"
  slug="tramsformation_transform"
  thumbnail="/assets/images/projects/tramsformation/tramsformation_transform_preview.jpg"
  title="Tramsformer transformation"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformation_transform_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformer_w_1_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="landscape"
  slug="tramsformation_w_1"
  thumbnail="/assets/images/projects/tramsformation/tramsformer_w_1_preview.jpg"
  title="Tramsformer W-Class Robot Mode"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformer_w_1_full.jpg"
/>
`;

exports[`Component -> ProjectMedia -> Tramsformation should render the ProjectMedia UI (src: "/assets/images/projects/tramsformation/tramsformer_w_2_preview.jpg") without throwing an error 1`] = `
<Connect(Component)
  orientation="landscape"
  slug="tramsformation_w_2"
  thumbnail="/assets/images/projects/tramsformation/tramsformer_w_2_preview.jpg"
  title="Tramsformer W-Class Tram Mode"
  type="image"
  url="/assets/images/projects/tramsformation/tramsformer_w_2_full.jpg"
/>
`;
